--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "files": [
     "yarn.lock",
     "index.js",
+    "server.js",
+    "server",
+    "config/!(env|local)*",
     "lib",
     "data",
     "dist",
@@ -32,10 +35,15 @@
     "prebuild": "yarn run clean",
     "build:index": "babel --source-maps --out-dir dist index.js",
     "build:lib": "babel --source-maps --ignore='*.spec.js' --out-dir dist/lib lib",
+    "build:server": "babel --source-maps --out-dir dist/server server",
     "dist": "yarn run build",
     "predist": "yarn test",
     "preversion": "yarn run dist",
     "postversion": "git push && git push --tags",
+    "server": "babel-node server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
+    "server:watch": "babel-watch --watch config server/index.js | bunyan -L -o ${LOG_FORMAT:-short",
+    "server:inspect": "babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short",
+    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short",
     "example": "babel-node examples",
     "example:watch": "babel-watch --watch examples/local.json examples",
     "example:inspect": "babel-node --inspect examples",
@@ -79,6 +87,11 @@
   "nyc": {
     "exclude": [
       "**/index.js",
+      "server.js",
+      "lib/app.js",
+      "lib/dependencies.js",
+      "lib/lifecycle/**/*.js",
+      "config/**/*.js",
       "dist/**/*.js",
       "package/**/*.js",
       "examples/**/*.js",
@@ -93,9 +106,15 @@
   "engines": {
     "node": ">=8.9.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@meltwater/mlabs-health": "^1.0.0",
+    "@meltwater/mlabs-koa": "^1.0.0",
+    "awilix": "^3.0.0",
+    "koa": "^2.4.1"
+  },
   "devDependencies": {
     "@meltwater/examplr": "^3.0.0",
+    "@meltwater/mlabs-logger": "^3.1.0",
     "ava": "^0.24.0",
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
