Update name and README for service

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@meltwater/makenew-node-lib",
+  "name": "@meltwater/makenew-koa-service",
   "version": "4.1.6",
-  "description": "npm package skeleton for Meltwater Node.js libraries.",
+  "description": "Koa skeleton for Meltwater Node.js microservices.",
   "main": "dist/index.js",
   "module": "index.js",
   "keywords": [
     "meltwater",
+    "koa",
     "node"
   ],
-  "homepage": "https://github.com/meltwater/makenew-node-lib",
-  "bugs": "https://github.com/meltwater/makenew-node-lib/issues",
-  "repository": "meltwater/makenew-node-lib",
+  "homepage": "https://github.com/meltwater/makenew-koa-service",
+  "bugs": "https://github.com/meltwater/makenew-koa-service/issues",
+  "repository": "meltwater/makenew-koa-service",
   "license": "SEE LICENSE IN LICENSE.txt",
   "author": {
     "name": "Evan Sosenko",
