--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "preversion": "yarn run dist",
     "postversion": "git push && git push --tags",
     "server": "babel-node server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
-    "server:watch": "babel-watch --watch config server/index.js | bunyan -L -o ${LOG_FORMAT:-short",
-    "server:inspect": "babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short",
-    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short",
+    "server:watch": "babel-watch --watch config server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
+    "server:inspect": "babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
+    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
     "example": "babel-node examples",
     "example:watch": "babel-watch --watch examples/local.json examples",
     "example:inspect": "babel-node --inspect examples",
