Make config and boot async

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "exclude": [
       "**/index.js",
       "server.js",
+      "server/boot.js",
       "lib/app.js",
       "lib/dependencies.js",
       "lib/lifecycle/**/*.js",
