Update to mlabs-koa version 2

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "predist": "yarn test",
     "preversion": "yarn run dist",
     "postversion": "git push && git push --tags",
-    "server": "babel-node server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
-    "server:watch": "babel-watch --watch config server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
-    "server:inspect": "babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
-    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index.js | bunyan -L -o ${LOG_FORMAT:-short}",
+    "server": "babel-node server/index.js",
+    "server:watch": "babel-watch --watch config server/index.js",
+    "server:inspect": "babel-node --inspect server/index.js",
+    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index.js",
     "example": "babel-node examples",
     "example:watch": "babel-watch --watch examples/local.json examples",
     "example:inspect": "babel-node --inspect examples",
@@ -110,13 +110,12 @@
   },
   "dependencies": {
     "@meltwater/mlabs-health": "^1.0.0",
-    "@meltwater/mlabs-koa": "^1.7.0",
+    "@meltwater/mlabs-koa": "^2.0.0",
     "awilix": "^3.0.0",
     "koa": "^2.4.1"
   },
   "devDependencies": {
     "@meltwater/examplr": "^4.1.2",
-    "@meltwater/mlabs-logger": "^3.1.0",
     "ava": "^0.25.0",
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
