--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,23 +49,29 @@ references:
           key: node-modules-{{ arch }}-{{ checksum ".versions" }}-{{ checksum "yarn.lock" }}
           paths: node_modules
       - run:
-          name: Test and build package
+          name: Test package
           command: |
-            if [[ "${PACKAGE}" == 'true' ]]; then
+            if [[ "${TEST_PACKAGE}" == 'true' ]]; then
+              yarn test
+            fi
+      - run:
+          name: Test server
+          command: |
+            if [[ "${TEST_SERVER}" == 'true' ]]; then
+              yarn run test:server
+            fi
+      - run:
+          name: Build package
+          command: |
+            if [[ "${BUILD_PACKAGE}" == 'true' ]]; then
               yarn add --exact source-map-support@0.5.3
               yarn run build
               yarn pack
-            elif [[ "${SERVER_TEST}" == 'true' ]]; then
-              yarn run test:server
-            elif [[ "${GREENKEEPER}" == 'true' ]]; then
-              echo 'Skipping tests for Greenkeeper lockfile update'
-            else
-              yarn test
             fi
       - run:
           name: Extract package
           command: |
-            if [[ "${PACKAGE}" == 'true' ]]; then
+            if [[ "${BUILD_PACKAGE}" == 'true' ]]; then
               tar -xzf *.tgz
             else
               mkdir package
@@ -157,17 +163,20 @@ references:
 jobs:
   node-carbon:
     environment:
+      TEST_PACKAGE: 'true'
       COVERAGE: 'true'
     docker:
       - image: node:carbon
     <<: *build
   node-carbon-alpine:
+    environment:
+      TEST_PACKAGE: 'true'
     docker:
       - image: node:carbon-alpine
     <<: *build
   package:
     environment:
-      PACKAGE: 'true'
+      BUILD_PACKAGE: 'true'
     docker:
       - image: node:carbon
     <<: *build
@@ -184,7 +193,7 @@ jobs:
     <<: *push
   test-server:
     environment:
-      SERVER_TEST: 'true'
+      TEST_SERVER: 'true'
       COVERAGE: 'true'
     docker:
       - image: node:carbon-alpine
