--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test": "nyc ava",
     "pretest": "npm-run-all lint",
     "test:update": "ava --update-snapshots",
-    "test:server": "nyc ava 'test/**/*.test.js'",
-    "test:server:update": "ava --update-snapshots 'test/**/*.test.js'",
+    "test:behavior": "nyc ava 'test/**/*.test.js'",
+    "test:behavior:update": "ava --update-snapshots 'test/**/*.test.js'",
     "lint": "gulp lint",
     "clean": "del dist",
     "build": "npm-run-all --parallel build:*",
@@ -80,7 +80,6 @@
   "ava": {
     "files": [
       "**/*.spec.js",
-      "!**/*.test.js",
       "!dist/**/*",
       "!package/**/*"
     ],
@@ -105,6 +104,7 @@
       "dist/**/*.js",
       "package/**/*.js",
       "examples/**/*.js",
+      "**/*.test.js",
       "**/*.spec.js"
     ],
     "reporter": [
