--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test": "nyc ava",
     "pretest": "npm-run-all lint",
     "test:update": "ava --update-snapshots",
-    "test:behavior": "nyc ava 'test/**/*.test.js'",
-    "test:behavior:update": "ava --update-snapshots 'test/**/*.test.js'",
+    "test:smoke": "nyc ava 'test/**/*.test.js'",
+    "test:smoke:update": "ava --update-snapshots 'test/**/*.test.js'",
     "lint": "gulp lint",
     "clean": "del dist",
     "build": "npm-run-all --parallel build:*",
