Remove .js from index where possible

--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "predist": "npm-run-all test",
     "preversion": "npm-run-all dist",
     "postversion": "git push && git push --tags",
-    "server": "babel-node server/index.js",
-    "server:test": "NODE_ENV=test babel-node server/index.js",
-    "server:watch": "babel-watch --watch config server/index.js",
-    "server:inspect": "babel-node --inspect server/index.js",
-    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index.js",
+    "server": "babel-node server/index",
+    "server:test": "NODE_ENV=test babel-node server/index",
+    "server:watch": "babel-watch --watch config server/index",
+    "server:inspect": "babel-node --inspect server/index",
+    "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index",
     "example": "babel-node examples",
     "example:watch": "babel-watch --watch examples/local.json examples",
     "example:inspect": "babel-node --inspect examples",
