Add addtional server test commands

--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
     "preversion": "npm-run-all dist",
     "postversion": "git push && git push --tags",
     "server": "babel-node server/index",
-    "server:test": "NODE_ENV=test babel-node server/index",
     "server:watch": "babel-watch --watch config server/index",
     "server:inspect": "babel-node --inspect server/index",
     "server:inspect:watch": "nodemon node_modules/.bin/babel-node --inspect server/index",
+    "server:test": "NODE_ENV=test babel-node server/index",
+    "server:test:watch": "NODE_ENV=test babel-watch --watch config server/index",
+    "server:test:inspect": "NODE_ENV=test babel-node --inspect server/index",
+    "server:test:inspect:watch": "NODE_ENV=test nodemon node_modules/.bin/babel-node --inspect server/index",
     "example": "babel-node examples",
     "example:watch": "babel-watch --watch examples/local.json examples",
     "example:inspect": "babel-node --inspect examples",
