--- a/package.json
+++ b/package.json
@@ -121,9 +121,10 @@
   },
   "dependencies": {
     "@meltwater/mlabs-health": "^1.1.3",
-    "@meltwater/mlabs-koa": "^2.1.2",
+    "@meltwater/mlabs-koa": "^2.3.0",
     "awilix": "^3.0.6",
-    "koa": "^2.5.0"
+    "koa": "^2.5.0",
+    "prom-client": "^11.0.0"
   },
   "devDependencies": {
     "@meltwater/examplr": "^4.1.4",
