--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,9 @@ references:
     docker:
       - image: meltwaterfoundation/drone-cli
     steps:
+      - run:
+          name: Install Alpine Linux build dependencies
+          command: apk add --no-cache ca-certificates git openssh-client
       - checkout
       - deploy:
           name: Deploy
