--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,6 @@
-# This file mirrors .gitignore with additional overrides at the end.
-
 # Parts of this file were adapted from
 # GitHub’s collection of .gitignore file templates
-# which are Copyright (c) 2017 GitHub, Inc.
+# which are Copyright (c) 2018 GitHub, Inc.
 # and released under the MIT License.
 # For more details, visit the project page:
 # https://github.com/github/gitignore
@@ -12,7 +10,9 @@ dist
 package
 
 # Local config
+config/env.*
 config/local.*
+config/secret.*
 examples/local.json
 
 # Environment versions file
@@ -27,6 +27,9 @@ examples/local.json
 
 # Temporary development files
 tmp
+
+# npm lockfile (only yarn.lock supported)
+package-lock.json
 
 # Logs
 logs
@@ -66,7 +69,7 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
+# TypeScript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -87,11 +90,17 @@ typings/
 # dotenv environment variables file
 .env
 
-# Docker exceptions
-.circleci
-.dockerignore
-.editorconfig
-.git
-.gitignore
-Dockerfile
-!package
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
