--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
     "@meltwater/mlabs-koa": "^5.0.0",
     "awilix": "^3.0.6",
     "koa": "^2.5.0",
-    "prom-client": "^11.0.0"
+    "prom-client": "^11.0.0",
+    "source-map-support": "^0.5.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
