--- a/package.json
+++ b/package.json
@@ -122,8 +122,8 @@
   },
   "dependencies": {
     "@meltwater/mlabs-health": "^1.1.3",
-    "@meltwater/mlabs-koa": "^6.0.0",
-    "awilix": "^3.0.6",
+    "@meltwater/mlabs-koa": "^7.0.0-rc.0",
+    "awilix": "^4.0.0",
     "koa": "^2.5.0",
     "prom-client": "^11.0.0",
     "source-map-support": "^0.5.9"
